@@ -14,6 +14,8 @@ Release 1.1 (in development)
 
 * #176: Provide ``private-members`` option for autodoc directives.
 
+* #520: Provide ``special-members`` option for autodoc directives.
+
 * #138: Add an ``index`` role, to make inline index entries.
 
 * #443: Allow referencing external graphviz files.
